--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "url": "https://www.patrick-wied.at/"
   },
   "main": "build/heatmap.js",
+  "module": "./build/heatmap.mjs",
+  "exports": {
+    ".": {
+      "import": "./dist/heatmap.mjs",
+      "require": "./dist/heatmap.js"
+    }
+  },
+  "scripts": {
+    "build": "vite build",
+    "test": "jest",
+    "lint": "npx eslint src",
+    "lint:fix": "npx eslint --fix src"
+  },
   "devDependencies": {
-    "grunt": ">= 0.4.1",
-    "coffee-script": ">= 1.6.3",
-    "grunt-contrib-uglify": ">= 0.2.0",
-    "grunt-contrib-concat": ">= 0.1.3",
-    "grunt-contrib-watch": "0.2.0rc7",
-    "grunt-contrib-jshint": ">= 0.3.0"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11"
   },
   "keywords": [
     "heatmap",
