--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heatmap.js",
+  "name": "@gausszhou/heatmap",
   "version": "2.0.5",
   "description": "Dynamic JavaScript Heatmaps for the Web",
   "homepage": "https://www.patrick-wied.at/static/heatmapjs/",
@@ -37,9 +37,6 @@
   ],
   "files": [
     "build",
-    "plugins",
-    "examples",
-    "docs",
     "package.json",
     "LICENSE",
     "README.md"
